Bug 105277 - Icon of Chemistry extension cannot seeing clearly when OpenGL is enabled
Summary: Icon of Chemistry extension cannot seeing clearly when OpenGL is enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.0.1 rc
Hardware: All Windows (All)
: medium normal
Assignee: Luboš Luňák
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2017-01-12 08:52 UTC by Volga
Modified: 2019-04-16 11:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
What I have seen (12.80 KB, application/vnd.oasis.opendocument.text)
2017-01-12 08:54 UTC, Volga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volga 2017-01-12 08:52:44 UTC
Description:
I have used Chemistry extension in LibreOffice Writer, but when I enabled OpenGL, the icon cannot seeing clearly on toolbar.

Steps to Reproduce:
1. Install Chemistry extension from https://extensions.libreoffice.org/extensions/chemistry
2. Open Tools -> Option -> View

Actual Results:  
See my attachment

Expected Results:
This icon should looks the same even if OpenGL is enabled.


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 5.3.0.1 (x64)
Build ID: 3b800451b1d0c48045de03b5b3c7bbbac87f20d9
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 布局引擎:新; 
Locale: zh-CN (zh_CN); Calc: group


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 1 Volga 2017-01-12 08:54:27 UTC
Created attachment 130343 [details]
What I have seen
Comment 2 Aron Budea 2017-01-21 06:20:22 UTC
Confirmed. Looks exactly like the screenshots in the attached document.

Version: 5.3.0.2
Build ID: 5ad7b2889021c491af62f7930a4b1cb631392f16
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; Layout Engine: new; 
Locale: hu-HU (hu_HU); Calc: CL
Comment 3 QA Administrators 2018-05-03 02:42:03 UTC Comment hidden (obsolete)
Comment 4 V Stuart Foote 2019-03-31 15:17:07 UTC
Issue remains on Windows 10 Home 64-bit en-US with Intel HD Graphics 620 and
Version: 6.2.2.2 (x64)
Build ID: 2b840030fec2aae0fd2658d8d4f9548af4e3518d
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The BMP icons of the extension are being mishandled--incorrectly sampled/scaled-- when rendered to toolbars when OpenGL rendering is enabled.
Comment 5 Commit Notification 2019-04-16 11:48:03 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/641005f821be1bd59dbd380474b076d157a46932%5E%21

fix areaScaleFragmentShader.glsl with texture atlas (tdf#105277)

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.