fix areaScaleFragmentShader.glsl with texture atlas (tdf#105277)

With a texture atlas the "texture" is just a subtexture of a larger texture,
so texture coordinates are not the full range between 0 and 1, but just
a part of it. Since areaScaleFragmentShader converts between pixel
and texture coordinates, the conversion needs to take this into account.

Change-Id: I9d29ffea52551d19ba681971a2b4f140a35b491c